--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
 <h1><%= "#{@user.name}'s Dashboard" %></h1><br>
 
+<%=button_to "Discover New Movies", user_discover_index_path(@user), method: :get %>
+
 <section class="viewing_parties">
   <% @user.viewing_parties.each do |party| %>
     <div class="viewing_party">
          Party Time: <%= party.date %> at <%= party.start_time %><br>
-         Host: <%= party.find_host.name %><br>
+         <b>Host: <%= party.find_host.name %></b><br>
          Who's Coming? <br/>
 
          <ol>
+            <li><b><%= @user.name %></b></li>
             <% party.users.each do |attendee| %>
+               <% if attendee.name != @user.name %>
                <li><%= attendee.name %> </li>
+               <% end %>
             <% end %>
          </ol>
 
