--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
          <% if party.movie_id != nil %>
          Movie: <%= link_to "#{party.movie_by_id.title}", user_movie_path(@user, party.movie_id) %>
          <br>
-         <%= image_tag "https://image.tmdb.org/t/p/w92#{party.movie_by_id.poster_path}" %>
+         <%= image_tag "https://image.tmdb.org/t/p/w92#{party.movie_by_id.poster_path}", class: 'movie-poster' %>
          <% end %>
 
     </div><br>
